--- a/recommender.ipynb
+++ b/recommender.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
        "4  http://books.google.com/books/content?id=DAAAA...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
        "\twith 52031 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,13 +228,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# create a series of the indexes\n",
     "\n",
     "indices = pd.Series(books['title'].index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input_title = \"War and Peace\"\n",
+    "\n",
+    "input_array = books[books['title'] == input_title].index.values\n",
+    "\n",
+    "input_index = input_array[0]\n",
+    "\n",
+    "input_index"
    ]
   },
   {
@@ -259,26 +285,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3037                                          Nine Horses\n",
-       "3121                                            The March\n",
-       "2482    The Nightmare Room: The Nightmare Begins! (The...\n",
-       "2428                                  A Room of One's Own\n",
-       "3380                                    The Lost Painting\n",
-       "1509     Where I'm Calling From: New and Selected Stories\n",
-       "955                                     Paris to the Moon\n",
-       "4833                                         Theodore Rex\n",
-       "2574              Color: A Natural History of the Palette\n",
-       "472                  1968: The Year That Rocked the World\n",
+       "2326                  Collected Shorter Fiction: Volume I\n",
+       "2393    War and Peace and War: The Rise and Fall of Em...\n",
+       "53                                 Tolstoy: Anna Karenina\n",
+       "1541                       The Gardens of Emily Dickinson\n",
+       "1333                          The Last Wife of Henry VIII\n",
+       "3065                                         Paris Spleen\n",
+       "66                       Sexus (The Rosy Crucifixion  #1)\n",
+       "2721                The Forever War (The Forever War  #1)\n",
+       "281                                   Pride and Prejudice\n",
+       "1164                                    When I Feel Angry\n",
        "Name: title, dtype: object"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,26 +312,26 @@
    "source": [
     "# pass the book index & the cosine similiarities\n",
     "\n",
-    "recommend(127, cosine_similarity_all_content)"
+    "recommend(input_index, cosine_similarity_all_content)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sailing Alone Around the Room: New and Selected Poems\n"
+      "War and Peace\n"
      ]
     }
    ],
    "source": [
     "# print the title of the book passed to the recommender\n",
     "\n",
-    "print(books['title'].iloc[127])"
+    "print(books['title'].iloc[input_index])"
    ]
   },
   {
