now shows table

--- a/recommender.ipynb
+++ b/recommender.ipynb
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
        "120"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,32 +279,133 @@
     "    #Get the books index\n",
     "    books_index = [i[0] for i in similarity_scores]\n",
     "    \n",
+    "    titles = books['title'].iloc[books_index]\n",
+    "    authors = books['authors'].iloc[books_index]\n",
+    "    \n",
+    "    #a_zip = zip(titles, authors)\n",
+    "    #data = list(a_zip)\n",
+    "    \n",
+    "    data = pd.DataFrame(list(zip(titles, authors)), \n",
+    "               columns =['Title', 'Authors'])\n",
+    "  \n",
+    "    return data\n",
+    "    \n",
     "    #Return the top 10 most similar books\n",
-    "    return books['title'].iloc[books_index]"
+    "    #return books['title'].iloc[books_index]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Authors</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Collected Shorter Fiction: Volume I</td>\n",
+       "      <td>Leo Tolstoy/Aylmer Maude/Nigel J. Cooper</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>War and Peace and War: The Rise and Fall of Em...</td>\n",
+       "      <td>Peter Turchin</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Tolstoy: Anna Karenina</td>\n",
+       "      <td>Anthony Thorlby</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>The Gardens of Emily Dickinson</td>\n",
+       "      <td>Judith Farr/Louise Carter</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>The Last Wife of Henry VIII</td>\n",
+       "      <td>Carolly Erickson</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Paris Spleen</td>\n",
+       "      <td>Charles Baudelaire/Louise Varèse</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Sexus (The Rosy Crucifixion  #1)</td>\n",
+       "      <td>Henry Miller</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>The Forever War (The Forever War  #1)</td>\n",
+       "      <td>Joe Haldeman</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Pride and Prejudice</td>\n",
+       "      <td>Jane Austen</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>When I Feel Angry</td>\n",
+       "      <td>Nancy Cote/Cornelia Maude Spelman</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "2326                  Collected Shorter Fiction: Volume I\n",
-       "2393    War and Peace and War: The Rise and Fall of Em...\n",
-       "53                                 Tolstoy: Anna Karenina\n",
-       "1541                       The Gardens of Emily Dickinson\n",
-       "1333                          The Last Wife of Henry VIII\n",
-       "3065                                         Paris Spleen\n",
-       "66                       Sexus (The Rosy Crucifixion  #1)\n",
-       "2721                The Forever War (The Forever War  #1)\n",
-       "281                                   Pride and Prejudice\n",
-       "1164                                    When I Feel Angry\n",
-       "Name: title, dtype: object"
+       "                                               Title  \\\n",
+       "0                Collected Shorter Fiction: Volume I   \n",
+       "1  War and Peace and War: The Rise and Fall of Em...   \n",
+       "2                             Tolstoy: Anna Karenina   \n",
+       "3                     The Gardens of Emily Dickinson   \n",
+       "4                        The Last Wife of Henry VIII   \n",
+       "5                                       Paris Spleen   \n",
+       "6                   Sexus (The Rosy Crucifixion  #1)   \n",
+       "7              The Forever War (The Forever War  #1)   \n",
+       "8                                Pride and Prejudice   \n",
+       "9                                  When I Feel Angry   \n",
+       "\n",
+       "                                    Authors  \n",
+       "0  Leo Tolstoy/Aylmer Maude/Nigel J. Cooper  \n",
+       "1                             Peter Turchin  \n",
+       "2                           Anthony Thorlby  \n",
+       "3                 Judith Farr/Louise Carter  \n",
+       "4                          Carolly Erickson  \n",
+       "5          Charles Baudelaire/Louise Varèse  \n",
+       "6                              Henry Miller  \n",
+       "7                              Joe Haldeman  \n",
+       "8                               Jane Austen  \n",
+       "9         Nancy Cote/Cornelia Maude Spelman  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,12 +413,13 @@
    "source": [
     "# pass the book index & the cosine similiarities\n",
     "\n",
-    "recommend(input_index, cosine_similarity_all_content)"
+    "recommended_list = recommend(input_index, cosine_similarity_all_content)\n",
+    "recommended_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
