updated data cleaning notebook

--- a/Data/data_cleaning.ipynb
+++ b/Data/data_cleaning.ipynb
@@ -583,7 +583,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Keep English books only"
+    "## Keep English-language books only\n",
+    "\n",
+    "Some non-English-language books contain characters that might not display correctly"
    ]
   },
   {
