fixed database and added autocomplete

--- a/Data/data_cleaning.ipynb
+++ b/Data/data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,7 +615,7 @@
     "# drop unneeded columns\n",
     "\n",
     "cleaned = cleaned.drop([\"bookID\", \"title_y\", \"subtitle\", \"average_rating_x\", \"authors_y\", \"isbn13_y\", \\\n",
-    "                        \"average_rating_y\", \"  num_pages\", \"ratings_count_x\", \"isbn13_x\", \"description\", \\\n",
+    "                        \"average_rating_y\", \"  num_pages\", \"ratings_count_x\", \"isbn13_x\", \\\n",
     "                        \"published_year\", \"num_pages\", \"ratings_count_y\", \"publication_date\", \"text_reviews_count\", \\\n",
     "                       \"language_code\",\"Unnamed: 12\"], axis=1)"
    ]
@@ -711,6 +711,7 @@
        "      <th>publisher</th>\n",
        "      <th>categories</th>\n",
        "      <th>thumbnail</th>\n",
+       "      <th>description</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -722,6 +723,7 @@
        "      <td>Scholastic Inc.</td>\n",
        "      <td>Juvenile Fiction</td>\n",
        "      <td>http://books.google.com/books/content?id=QzI0B...</td>\n",
+       "      <td>When Harry Potter and the Half-Blood Prince op...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -731,6 +733,7 @@
        "      <td>Scholastic Inc.</td>\n",
        "      <td>Juvenile Fiction</td>\n",
        "      <td>http://books.google.com/books/content?id=OIJ5B...</td>\n",
+       "      <td>In Harry Potter and the Order of the Phoenix, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -740,6 +743,7 @@
        "      <td>Scholastic</td>\n",
        "      <td>Juvenile Fiction</td>\n",
        "      <td>http://books.google.com/books/content?id=h2Y-P...</td>\n",
+       "      <td>When the Chamber of Secrets is opened again at...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -749,6 +753,7 @@
        "      <td>Scholastic Inc.</td>\n",
        "      <td>Juvenile Fiction</td>\n",
        "      <td>http://books.google.com/books/content?id=IZN5B...</td>\n",
+       "      <td>For twelve long years, the dread fortress of A...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -758,6 +763,7 @@
        "      <td>Scholastic</td>\n",
        "      <td>Juvenile Fiction</td>\n",
        "      <td>http://books.google.com/books/content?id=DAAAA...</td>\n",
+       "      <td>The first five years of Harry Potter magic are...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -767,55 +773,61 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5285</th>\n",
+       "      <th>5203</th>\n",
+       "      <td>Montaillou: Cathars and Catholics in a French ...</td>\n",
+       "      <td>Emmanuel Le Roy Ladurie/Barbara Bray</td>\n",
+       "      <td>0140137009</td>\n",
+       "      <td>Penguin</td>\n",
+       "      <td>Albigenses</td>\n",
+       "      <td>http://books.google.com/books/content?id=gBZ7Q...</td>\n",
+       "      <td>An enthralling account of day-to-day life in a...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5204</th>\n",
        "      <td>Undaunted Courage: The Pioneering First Missio...</td>\n",
        "      <td>Stephen E. Ambrose</td>\n",
        "      <td>074347788X</td>\n",
        "      <td>Simon &amp; Schuster</td>\n",
        "      <td>Explorers</td>\n",
        "      <td>http://books.google.com/books/content?id=1egIO...</td>\n",
+       "      <td>'This was much more than a bunch of guys out o...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5286</th>\n",
-       "      <td>Jonny Reb &amp; Billy Yank</td>\n",
-       "      <td>Alexander Hunter</td>\n",
-       "      <td>1568520808</td>\n",
-       "      <td>Not Avail</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>http://books.google.com/books/content?id=z4LeI...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5287</th>\n",
+       "      <th>5205</th>\n",
        "      <td>Whores for Gloria</td>\n",
        "      <td>William T. Vollmann</td>\n",
        "      <td>0140231579</td>\n",
        "      <td>Penguin Books</td>\n",
        "      <td>Fiction</td>\n",
        "      <td>http://books.google.com/books/content?id=mQA-P...</td>\n",
+       "      <td>From the acclaimed author of The Rainbow Stori...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5288</th>\n",
+       "      <th>5206</th>\n",
        "      <td>Expelled from Eden: A William T. Vollmann Reader</td>\n",
        "      <td>William T. Vollmann/Larry McCaffery/Michael He...</td>\n",
        "      <td>1560254416</td>\n",
        "      <td>Da Capo Press</td>\n",
        "      <td>Fiction</td>\n",
        "      <td>http://books.google.com/books/content?id=Q_XQs...</td>\n",
+       "      <td>No stranger to living and writing on the edge,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5289</th>\n",
+       "      <th>5207</th>\n",
        "      <td>You Bright and Risen Angels</td>\n",
        "      <td>William T. Vollmann</td>\n",
        "      <td>0140110879</td>\n",
        "      <td>Penguin Books</td>\n",
        "      <td>Fiction</td>\n",
        "      <td>http://books.google.com/books/content?id=d0buA...</td>\n",
+       "      <td>This comic and surreal novel about the beastli...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5290 rows × 6 columns</p>\n",
+       "<p>5208 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -826,11 +838,11 @@
        "3     Harry Potter and the Prisoner of Azkaban (Harr...   \n",
        "4     Harry Potter Boxed Set  Books 1-5 (Harry Potte...   \n",
        "...                                                 ...   \n",
-       "5285  Undaunted Courage: The Pioneering First Missio...   \n",
-       "5286                             Jonny Reb & Billy Yank   \n",
-       "5287                                  Whores for Gloria   \n",
-       "5288   Expelled from Eden: A William T. Vollmann Reader   \n",
-       "5289                        You Bright and Risen Angels   \n",
+       "5203  Montaillou: Cathars and Catholics in a French ...   \n",
+       "5204  Undaunted Courage: The Pioneering First Missio...   \n",
+       "5205                                  Whores for Gloria   \n",
+       "5206   Expelled from Eden: A William T. Vollmann Reader   \n",
+       "5207                        You Bright and Risen Angels   \n",
        "\n",
        "                                                authors        isbn  \\\n",
        "0                            J.K. Rowling/Mary GrandPré  0439785960   \n",
@@ -839,11 +851,11 @@
        "3                            J.K. Rowling/Mary GrandPré  043965548X   \n",
        "4                            J.K. Rowling/Mary GrandPré  0439682584   \n",
        "...                                                 ...         ...   \n",
-       "5285                                 Stephen E. Ambrose  074347788X   \n",
-       "5286                                   Alexander Hunter  1568520808   \n",
-       "5287                                William T. Vollmann  0140231579   \n",
-       "5288  William T. Vollmann/Larry McCaffery/Michael He...  1560254416   \n",
-       "5289                                William T. Vollmann  0140110879   \n",
+       "5203               Emmanuel Le Roy Ladurie/Barbara Bray  0140137009   \n",
+       "5204                                 Stephen E. Ambrose  074347788X   \n",
+       "5205                                William T. Vollmann  0140231579   \n",
+       "5206  William T. Vollmann/Larry McCaffery/Michael He...  1560254416   \n",
+       "5207                                William T. Vollmann  0140110879   \n",
        "\n",
        "             publisher        categories  \\\n",
        "0      Scholastic Inc.  Juvenile Fiction   \n",
@@ -852,26 +864,39 @@
        "3      Scholastic Inc.  Juvenile Fiction   \n",
        "4           Scholastic  Juvenile Fiction   \n",
        "...                ...               ...   \n",
-       "5285  Simon & Schuster         Explorers   \n",
-       "5286         Not Avail     United States   \n",
-       "5287     Penguin Books           Fiction   \n",
-       "5288     Da Capo Press           Fiction   \n",
-       "5289     Penguin Books           Fiction   \n",
+       "5203           Penguin        Albigenses   \n",
+       "5204  Simon & Schuster         Explorers   \n",
+       "5205     Penguin Books           Fiction   \n",
+       "5206     Da Capo Press           Fiction   \n",
+       "5207     Penguin Books           Fiction   \n",
        "\n",
-       "                                              thumbnail  \n",
-       "0     http://books.google.com/books/content?id=QzI0B...  \n",
-       "1     http://books.google.com/books/content?id=OIJ5B...  \n",
-       "2     http://books.google.com/books/content?id=h2Y-P...  \n",
-       "3     http://books.google.com/books/content?id=IZN5B...  \n",
-       "4     http://books.google.com/books/content?id=DAAAA...  \n",
+       "                                              thumbnail  \\\n",
+       "0     http://books.google.com/books/content?id=QzI0B...   \n",
+       "1     http://books.google.com/books/content?id=OIJ5B...   \n",
+       "2     http://books.google.com/books/content?id=h2Y-P...   \n",
+       "3     http://books.google.com/books/content?id=IZN5B...   \n",
+       "4     http://books.google.com/books/content?id=DAAAA...   \n",
+       "...                                                 ...   \n",
+       "5203  http://books.google.com/books/content?id=gBZ7Q...   \n",
+       "5204  http://books.google.com/books/content?id=1egIO...   \n",
+       "5205  http://books.google.com/books/content?id=mQA-P...   \n",
+       "5206  http://books.google.com/books/content?id=Q_XQs...   \n",
+       "5207  http://books.google.com/books/content?id=d0buA...   \n",
+       "\n",
+       "                                            description  \n",
+       "0     When Harry Potter and the Half-Blood Prince op...  \n",
+       "1     In Harry Potter and the Order of the Phoenix, ...  \n",
+       "2     When the Chamber of Secrets is opened again at...  \n",
+       "3     For twelve long years, the dread fortress of A...  \n",
+       "4     The first five years of Harry Potter magic are...  \n",
        "...                                                 ...  \n",
-       "5285  http://books.google.com/books/content?id=1egIO...  \n",
-       "5286  http://books.google.com/books/content?id=z4LeI...  \n",
-       "5287  http://books.google.com/books/content?id=mQA-P...  \n",
-       "5288  http://books.google.com/books/content?id=Q_XQs...  \n",
-       "5289  http://books.google.com/books/content?id=d0buA...  \n",
+       "5203  An enthralling account of day-to-day life in a...  \n",
+       "5204  'This was much more than a bunch of guys out o...  \n",
+       "5205  From the acclaimed author of The Rainbow Stori...  \n",
+       "5206  No stranger to living and writing on the edge,...  \n",
+       "5207  This comic and surreal novel about the beastli...  \n",
        "\n",
-       "[5290 rows x 6 columns]"
+       "[5208 rows x 7 columns]"
       ]
      },
      "execution_count": 15,
@@ -893,7 +918,9 @@
     {
      "data": {
       "text/plain": [
-       "Index(['title', 'authors', 'isbn', 'publisher', 'categories', 'thumbnail'], dtype='object')"
+       "Index(['title', 'authors', 'isbn', 'publisher', 'categories', 'thumbnail',\n",
+       "       'description'],\n",
+       "      dtype='object')"
       ]
      },
      "execution_count": 16,
@@ -916,11 +943,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cleaned.to_csv(\"final_cleaned.csv\")"
+    "cleaned.to_csv(\"cleaned_description.csv\")"
    ]
   },
   {
@@ -932,12 +959,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rds_connection_string = \"postgres:postgres@localhost:5432/books_db\"\n",
-    "engine = create_engine(f'postgresql://{rds_connection_string}')"
+    "#use this one for local database\n",
+    "db_connection_string = \"postgres:postgres@localhost:5432/books_db\"\n",
+    "\n",
+    "#use this one for remote database\n",
+    "#db_connection_string = \"PASTE REMOTE DATABASE URL HERE\"\n",
+    "\n",
+    "engine = create_engine(f'postgresql://{db_connection_string}')"
    ]
   },
   {
@@ -951,11 +983,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cleaned.to_sql(name='books', con=engine, if_exists='append')"
+    "cleaned.to_sql(name='booksdesc', con=engine, if_exists='append')"
    ]
   },
   {
@@ -967,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -998,6 +1030,7 @@
        "      <th>publisher</th>\n",
        "      <th>categories</th>\n",
        "      <th>thumbnail</th>\n",
+       "      <th>description</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1010,6 +1043,7 @@
        "      <td>Scholastic Inc.</td>\n",
        "      <td>Juvenile Fiction</td>\n",
        "      <td>http://books.google.com/books/content?id=QzI0B...</td>\n",
+       "      <td>When Harry Potter and the Half-Blood Prince op...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1020,6 +1054,7 @@
        "      <td>Scholastic Inc.</td>\n",
        "      <td>Juvenile Fiction</td>\n",
        "      <td>http://books.google.com/books/content?id=OIJ5B...</td>\n",
+       "      <td>In Harry Potter and the Order of the Phoenix, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1030,6 +1065,7 @@
        "      <td>Scholastic</td>\n",
        "      <td>Juvenile Fiction</td>\n",
        "      <td>http://books.google.com/books/content?id=h2Y-P...</td>\n",
+       "      <td>When the Chamber of Secrets is opened again at...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1040,6 +1076,7 @@
        "      <td>Scholastic Inc.</td>\n",
        "      <td>Juvenile Fiction</td>\n",
        "      <td>http://books.google.com/books/content?id=IZN5B...</td>\n",
+       "      <td>For twelve long years, the dread fortress of A...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1050,6 +1087,7 @@
        "      <td>Scholastic</td>\n",
        "      <td>Juvenile Fiction</td>\n",
        "      <td>http://books.google.com/books/content?id=DAAAA...</td>\n",
+       "      <td>The first five years of Harry Potter magic are...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1070,21 +1108,28 @@
        "3  J.K. Rowling/Mary GrandPré  043965548X  Scholastic Inc.  Juvenile Fiction   \n",
        "4  J.K. Rowling/Mary GrandPré  0439682584       Scholastic  Juvenile Fiction   \n",
        "\n",
-       "                                           thumbnail  \n",
-       "0  http://books.google.com/books/content?id=QzI0B...  \n",
-       "1  http://books.google.com/books/content?id=OIJ5B...  \n",
-       "2  http://books.google.com/books/content?id=h2Y-P...  \n",
-       "3  http://books.google.com/books/content?id=IZN5B...  \n",
-       "4  http://books.google.com/books/content?id=DAAAA...  "
+       "                                           thumbnail  \\\n",
+       "0  http://books.google.com/books/content?id=QzI0B...   \n",
+       "1  http://books.google.com/books/content?id=OIJ5B...   \n",
+       "2  http://books.google.com/books/content?id=h2Y-P...   \n",
+       "3  http://books.google.com/books/content?id=IZN5B...   \n",
+       "4  http://books.google.com/books/content?id=DAAAA...   \n",
+       "\n",
+       "                                         description  \n",
+       "0  When Harry Potter and the Half-Blood Prince op...  \n",
+       "1  In Harry Potter and the Order of the Phoenix, ...  \n",
+       "2  When the Chamber of Secrets is opened again at...  \n",
+       "3  For twelve long years, the dread fortress of A...  \n",
+       "4  The first five years of Harry Potter magic are...  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.read_sql_query('select * from books', con=engine).head()"
+    "pd.read_sql_query('select * from booksdesc', con=engine).head()"
    ]
   },
   {
