--- a/recommender.ipynb
+++ b/recommender.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "# read csv file\n",
     "\n",
-    "df = pd.read_csv(\"data/final_cleaned.csv\")"
+    "df = pd.read_csv(\"data/cleaned_description.csv\")"
    ]
   },
   {
@@ -64,6 +64,7 @@
        "      <th>publisher</th>\n",
        "      <th>categories</th>\n",
        "      <th>thumbnail</th>\n",
+       "      <th>description</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -76,6 +77,7 @@
        "      <td>Scholastic Inc.</td>\n",
        "      <td>Juvenile Fiction</td>\n",
        "      <td>http://books.google.com/books/content?id=QzI0B...</td>\n",
+       "      <td>When Harry Potter and the Half-Blood Prince op...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -86,6 +88,7 @@
        "      <td>Scholastic Inc.</td>\n",
        "      <td>Juvenile Fiction</td>\n",
        "      <td>http://books.google.com/books/content?id=OIJ5B...</td>\n",
+       "      <td>In Harry Potter and the Order of the Phoenix, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -96,6 +99,7 @@
        "      <td>Scholastic</td>\n",
        "      <td>Juvenile Fiction</td>\n",
        "      <td>http://books.google.com/books/content?id=h2Y-P...</td>\n",
+       "      <td>When the Chamber of Secrets is opened again at...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -106,6 +110,7 @@
        "      <td>Scholastic Inc.</td>\n",
        "      <td>Juvenile Fiction</td>\n",
        "      <td>http://books.google.com/books/content?id=IZN5B...</td>\n",
+       "      <td>For twelve long years, the dread fortress of A...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -116,6 +121,7 @@
        "      <td>Scholastic</td>\n",
        "      <td>Juvenile Fiction</td>\n",
        "      <td>http://books.google.com/books/content?id=DAAAA...</td>\n",
+       "      <td>The first five years of Harry Potter magic are...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -136,12 +142,19 @@
        "3  J.K. Rowling/Mary GrandPré  043965548X  Scholastic Inc.  Juvenile Fiction   \n",
        "4  J.K. Rowling/Mary GrandPré  0439682584       Scholastic  Juvenile Fiction   \n",
        "\n",
-       "                                           thumbnail  \n",
-       "0  http://books.google.com/books/content?id=QzI0B...  \n",
-       "1  http://books.google.com/books/content?id=OIJ5B...  \n",
-       "2  http://books.google.com/books/content?id=h2Y-P...  \n",
-       "3  http://books.google.com/books/content?id=IZN5B...  \n",
-       "4  http://books.google.com/books/content?id=DAAAA...  "
+       "                                           thumbnail  \\\n",
+       "0  http://books.google.com/books/content?id=QzI0B...   \n",
+       "1  http://books.google.com/books/content?id=OIJ5B...   \n",
+       "2  http://books.google.com/books/content?id=h2Y-P...   \n",
+       "3  http://books.google.com/books/content?id=IZN5B...   \n",
+       "4  http://books.google.com/books/content?id=DAAAA...   \n",
+       "\n",
+       "                                         description  \n",
+       "0  When Harry Potter and the Half-Blood Prince op...  \n",
+       "1  In Harry Potter and the Order of the Phoenix, ...  \n",
+       "2  When the Chamber of Secrets is opened again at...  \n",
+       "3  For twelve long years, the dread fortress of A...  \n",
+       "4  The first five years of Harry Potter magic are...  "
       ]
      },
      "execution_count": 3,
@@ -170,7 +183,7 @@
    "source": [
     "# combine title, authors, publisher, & category columns into one\n",
     "\n",
-    "df['all'] = df['title'] + df['authors'] + df['publisher'] + df['categories']"
+    "df['all'] = df['title'] + df['authors'] + df['publisher'] + df['categories'] + df['description']"
    ]
   },
   {
@@ -219,8 +232,8 @@
     {
      "data": {
       "text/plain": [
-       "<5290x18488 sparse matrix of type '<class 'numpy.float64'>'\n",
-       "\twith 52031 stored elements in Compressed Sparse Row format>"
+       "<5208x41167 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 286783 stored elements in Compressed Sparse Row format>"
       ]
      },
      "execution_count": 7,
@@ -296,22 +309,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "120"
+       "633"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "input_title = \"War and Peace\"\n",
+    "input_title = \"The Great Gatsby\"\n",
     "\n",
     "input_array = books[books['title'] == input_title].index.values\n",
     "\n",
@@ -331,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,26 +371,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('Collected Shorter Fiction: Volume I',\n",
-       "  'Leo Tolstoy/Aylmer Maude/Nigel J. Cooper'),\n",
-       " ('War and Peace and War: The Rise and Fall of Empires', 'Peter Turchin'),\n",
-       " ('Tolstoy: Anna Karenina', 'Anthony Thorlby'),\n",
-       " ('The Gardens of Emily Dickinson', 'Judith Farr/Louise Carter'),\n",
-       " ('The Last Wife of Henry VIII', 'Carolly Erickson'),\n",
-       " ('Paris Spleen', 'Charles Baudelaire/Louise Varèse'),\n",
-       " ('Sexus (The Rosy Crucifixion  #1)', 'Henry Miller'),\n",
-       " ('The Forever War (The Forever War  #1)', 'Joe Haldeman'),\n",
-       " ('Pride and Prejudice', 'Jane Austen'),\n",
-       " ('When I Feel Angry', 'Nancy Cote/Cornelia Maude Spelman')]"
+       "[('All the Sad Young Men (Works of F. Scott Fitzgerald)',\n",
+       "  'F. Scott Fitzgerald/James L.W. West III'),\n",
+       " ('On Authorship',\n",
+       "  'F. Scott Fitzgerald/Matthew J. Bruccoli/Judith S. Baughman'),\n",
+       " (\"Cliffs Notes on Fitzgerald's the Great Gatsby\",\n",
+       "  'Kate Maurer/F. Scott Fitzgerald/CliffsNotes'),\n",
+       " ('A Life in Letters', 'F. Scott Fitzgerald/Matthew J. Bruccoli'),\n",
+       " ('The Short Stories', 'F. Scott Fitzgerald/Matthew J. Bruccoli'),\n",
+       " ('The Christians and the Fall of Rome (Great Ideas)', 'Edward Gibbon'),\n",
+       " ('The Great World', 'David Malouf'),\n",
+       " ('The St. Paul Stories of F. Scott Fitzgerald',\n",
+       "  'F. Scott Fitzgerald/Dave Page/Patricia Hampl'),\n",
+       " (\"Don DeLillo's White Noise: A Reader's Guide\", 'Leonard  Orr'),\n",
+       " (\"Walt Whitman's America\", 'David S. Reynolds')]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
